@@ -3,6 +3,7 @@ src/connection.c
 src/controller.c
 src/dlwin.c
 src/main.c
+src/protocol.c
 src/uimisc.c
 src/uimisc.h
 src/vgl-bookmark-window.c
